// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders Session unchanged {"clients": [Array], "description": "### Markdown", "disconnectedClients": [Object], "epoch": 0, "finished": false, "host": "5cdf4eb9-4c88-47ee-85da-5a2e970ed79f", "me": [Object], "pagination": [Object], "privatePreview": 0, "settings": [Object], "timerState": [Object], "votesVisible": false} 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-1 css-wj2tyh-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      <button
        aria-label="Private navigation"
        aria-pressed="false"
        class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-primary css-5w95gg-MuiButtonBase-root-MuiToggleButton-root"
        data-mui-internal-clone-element="true"
        tabindex="0"
        type="button"
        value="check"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.06 13C15.2 13 13.64 14.33 13.24 16.1C12.29 15.69 11.42 15.8 10.76 16.09C10.35 14.31 8.79 13 6.94 13C4.77 13 3 14.79 3 17C3 19.21 4.77 21 6.94 21C9 21 10.68 19.38 10.84 17.32C11.18 17.08 12.07 16.63 13.16 17.34C13.34 19.39 15 21 17.06 21C19.23 21 21 19.21 21 17C21 14.79 19.23 13 17.06 13M6.94 19.86C5.38 19.86 4.13 18.58 4.13 17S5.39 14.14 6.94 14.14C8.5 14.14 9.75 15.42 9.75 17S8.5 19.86 6.94 19.86M17.06 19.86C15.5 19.86 14.25 18.58 14.25 17S15.5 14.14 17.06 14.14C18.62 14.14 19.88 15.42 19.88 17S18.61 19.86 17.06 19.86M22 10.5H2V12H22V10.5M15.53 2.63C15.31 2.14 14.75 1.88 14.22 2.05L12 2.79L9.77 2.05L9.72 2.04C9.19 1.89 8.63 2.17 8.43 2.68L6 9H18L15.56 2.68L15.53 2.63Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      <nav
        aria-label="pagination navigation"
        class="MuiPagination-root MuiPagination-text css-1xra8g6-MuiPagination-root"
      >
        <ul
          class="MuiPagination-ul css-1c5o7vy-MuiPagination-ul"
        >
          <li>
            <button
              aria-label="Go to previous page"
              class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded Mui-disabled MuiPaginationItem-previousNext css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
                data-testid="NavigateBeforeIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
            </button>
          </li>
          <li>
            <button
              aria-current="page"
              aria-label="page 1"
              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded Mui-selected MuiPaginationItem-page css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              tabindex="0"
              type="button"
            >
              1
            </button>
          </li>
          <li>
            <button
              aria-label="Go to page 2"
              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-outlined MuiPaginationItem-rounded MuiPaginationItem-page css-ptck8z-MuiButtonBase-root-MuiPaginationItem-root"
              tabindex="0"
              type="button"
            >
              2
            </button>
          </li>
          <li>
            <button
              aria-label="Go to next page"
              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded MuiPaginationItem-previousNext css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </nav>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      <button
        aria-label="New page"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
        data-mui-internal-clone-element="true"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="AddBoxIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4z"
          />
        </svg>
      </button>
      <span
        aria-label="Delete this page"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
            />
          </svg>
        </button>
      </span>
      <button
        aria-label="Session settings"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
        data-mui-internal-clone-element="true"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="SettingsIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorInfo MuiAlert-standard css-1xxe1nn-MuiPaper-root-MuiAlert-root"
    role="alert"
    style="--Paper-shadow: none; transform: none; transition: transform 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    <div
      class="MuiAlert-icon css-vab54s-MuiAlert-icon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
        data-testid="InfoOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20, 12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10, 10 0 0,0 12,2M11,17H13V11H11V17Z"
        />
      </svg>
    </div>
    <div
      class="MuiAlert-message css-zioonp-MuiAlert-message"
    >
      You are privately viewing this page. Click 
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-163do5e-MuiTypography-root-MuiLink-root"
        href="javascript:throw new Error('React has blocked a javascript: URL as a security precaution.')"
      >
        here
      </a>
       to return to the active page.
    </div>
  </div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1sstspl-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-4e5lyq-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="_r_3o_"
      id="_r_3o_-label"
    >
      Description
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-1not416-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <div
        class="MuiInputBase-input MuiOutlinedInput-input MuiBox-root css-1kuhkwy-MuiInputBase-input-MuiOutlinedInput-input"
      >
        <div
          class="MuiBox-root css-xv66a"
        >
          <div
            class="markdown-mock"
          >
            ### Markdown
          </div>
        </div>
        <div
          aria-hidden="true"
          class="MuiBox-root css-o8q9qw"
        />
        <div
          aria-hidden="true"
          class="MuiBox-root css-1baomxd"
        />
      </div>
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-ex8a5f-MuiNotchedOutlined-root"
        >
          <span>
            Description
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-ljal69-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 css-1d243ht-MuiGrid-root"
    >
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        0.5
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        1
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        2
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        3
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorSecondary css-1byfd1d-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        5
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        8
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        13
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        21
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        100
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        Pass
      </button>
    </div>
  </div>
  <div />
  <div
    class="MuiTableContainer-root css-70zvr5-MuiTableContainer-root"
  >
    <table
      class="MuiTable-root css-kax9f7-MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Host
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          >
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault css-caa35p-MuiChip-root"
              style="transform: none; border-color: rgb(158, 158, 158); color: rgb(158, 158, 158); transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <span
                class="MuiChip-label css-16cgrcw-MuiChip-label"
              >
                5
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Voter 1
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          >
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault css-caa35p-MuiChip-root"
              style="transform: none; border-color: rgb(158, 158, 158); color: rgb(158, 158, 158); transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <span
                class="MuiChip-label css-16cgrcw-MuiChip-label"
              >
                Hidden
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Voter 2
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          />
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-1boqcjw-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-mwb7rv-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 css-1h3akp7-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-vqth7q-MuiTypography-root"
        >
          You are voting as 
          <b>
            Host
          </b>
          .
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 css-1qcs568-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorSecondary MuiButton-fullWidth css-6bpxjb-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Rejoin as observer
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders Session unchanged {"clients": [Array], "description": "### Markdown", "disconnectedClients": [Object], "epoch": 0, "finished": false, "host": "5cdf4eb9-4c88-47ee-85da-5a2e970ed79f", "me": [Object], "pagination": [Object], "privatePreview": null, "settings": [Object], "timerState": [Object], "votesVisible": false} 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-1 css-wj2tyh-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      <button
        aria-label="Private navigation"
        aria-pressed="false"
        class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-primary css-5w95gg-MuiButtonBase-root-MuiToggleButton-root"
        data-mui-internal-clone-element="true"
        tabindex="0"
        type="button"
        value="check"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.06 13C15.2 13 13.64 14.33 13.24 16.1C12.29 15.69 11.42 15.8 10.76 16.09C10.35 14.31 8.79 13 6.94 13C4.77 13 3 14.79 3 17C3 19.21 4.77 21 6.94 21C9 21 10.68 19.38 10.84 17.32C11.18 17.08 12.07 16.63 13.16 17.34C13.34 19.39 15 21 17.06 21C19.23 21 21 19.21 21 17C21 14.79 19.23 13 17.06 13M6.94 19.86C5.38 19.86 4.13 18.58 4.13 17S5.39 14.14 6.94 14.14C8.5 14.14 9.75 15.42 9.75 17S8.5 19.86 6.94 19.86M17.06 19.86C15.5 19.86 14.25 18.58 14.25 17S15.5 14.14 17.06 14.14C18.62 14.14 19.88 15.42 19.88 17S18.61 19.86 17.06 19.86M22 10.5H2V12H22V10.5M15.53 2.63C15.31 2.14 14.75 1.88 14.22 2.05L12 2.79L9.77 2.05L9.72 2.04C9.19 1.89 8.63 2.17 8.43 2.68L6 9H18L15.56 2.68L15.53 2.63Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      <nav
        aria-label="pagination navigation"
        class="MuiPagination-root MuiPagination-text css-1xra8g6-MuiPagination-root"
      >
        <ul
          class="MuiPagination-ul css-1c5o7vy-MuiPagination-ul"
        >
          <li>
            <button
              aria-label="Go to previous page"
              class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded Mui-disabled MuiPaginationItem-previousNext css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
                data-testid="NavigateBeforeIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
            </button>
          </li>
          <li>
            <button
              aria-current="page"
              aria-label="page 1"
              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded Mui-selected MuiPaginationItem-page css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              tabindex="0"
              type="button"
            >
              1
            </button>
          </li>
          <li>
            <button
              aria-label="Go to next page"
              class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded Mui-disabled MuiPaginationItem-previousNext css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </nav>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      <button
        aria-label="New page"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
        data-mui-internal-clone-element="true"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="AddBoxIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4z"
          />
        </svg>
      </button>
      <span
        aria-label="Delete this page"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
            />
          </svg>
        </button>
      </span>
      <button
        aria-label="Session settings"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
        data-mui-internal-clone-element="true"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="SettingsIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1sstspl-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-4e5lyq-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="_r_a_"
      id="_r_a_-label"
    >
      Description
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-1not416-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <div
        class="MuiInputBase-input MuiOutlinedInput-input MuiBox-root css-1kuhkwy-MuiInputBase-input-MuiOutlinedInput-input"
      >
        <div
          class="MuiBox-root css-xv66a"
        >
          <div
            class="markdown-mock"
          >
            ### Markdown
          </div>
        </div>
        <div
          aria-hidden="true"
          class="MuiBox-root css-o8q9qw"
        />
        <div
          aria-hidden="true"
          class="MuiBox-root css-1baomxd"
        />
      </div>
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-ex8a5f-MuiNotchedOutlined-root"
        >
          <span>
            Description
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-ljal69-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-1mte8df-MuiGrid-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        0.5
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        1
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        2
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        3
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorSecondary css-1byfd1d-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        5
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        8
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        13
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        21
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        100
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Pass
      </button>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorSecondary MuiButton-fullWidth css-d54x1o-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Show votes
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-lrpqt-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Clear votes
      </button>
    </div>
  </div>
  <div />
  <div
    class="MuiTableContainer-root css-70zvr5-MuiTableContainer-root"
  >
    <table
      class="MuiTable-root css-kax9f7-MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Host
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          >
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault css-caa35p-MuiChip-root"
              style="transform: none; border-color: rgb(158, 158, 158); color: rgb(158, 158, 158); transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <span
                class="MuiChip-label css-16cgrcw-MuiChip-label"
              >
                5
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Voter 1
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          >
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault css-caa35p-MuiChip-root"
              style="transform: none; border-color: rgb(158, 158, 158); color: rgb(158, 158, 158); transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <span
                class="MuiChip-label css-16cgrcw-MuiChip-label"
              >
                Hidden
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Voter 2
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          />
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-1boqcjw-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-mwb7rv-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 css-1h3akp7-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-vqth7q-MuiTypography-root"
        >
          You are voting as 
          <b>
            Host
          </b>
          .
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 css-1qcs568-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorSecondary MuiButton-fullWidth css-6bpxjb-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Rejoin as observer
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders Session unchanged {"clients": [Array], "description": "### Markdown", "disconnectedClients": [Object], "epoch": 0, "finished": false, "host": "5cdf4eb9-4c88-47ee-85da-5a2e970ed79f", "me": [Object], "pagination": [Object], "privatePreview": null, "settings": [Object], "timerState": [Object], "votesVisible": false} 2`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-1 css-wj2tyh-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      <nav
        aria-label="pagination navigation"
        class="MuiPagination-root MuiPagination-text css-1xra8g6-MuiPagination-root"
      >
        <ul
          class="MuiPagination-ul css-1c5o7vy-MuiPagination-ul"
        >
          <li>
            <button
              aria-label="Go to previous page"
              class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded Mui-disabled MuiPaginationItem-previousNext css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
                data-testid="NavigateBeforeIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
            </button>
          </li>
          <li>
            <button
              aria-current="page"
              aria-label="page 1"
              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded Mui-selected MuiPaginationItem-page css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              tabindex="0"
              type="button"
            >
              1
            </button>
          </li>
          <li>
            <button
              aria-label="Go to next page"
              class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded Mui-disabled MuiPaginationItem-previousNext css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </nav>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      <button
        aria-label="New page"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
        data-mui-internal-clone-element="true"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="AddBoxIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4z"
          />
        </svg>
      </button>
      <span
        aria-label="Delete this page"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
            />
          </svg>
        </button>
      </span>
    </div>
  </div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1sstspl-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-4e5lyq-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="_r_v_"
      id="_r_v_-label"
    >
      Description
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-1not416-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <div
        class="MuiInputBase-input MuiOutlinedInput-input MuiBox-root css-1kuhkwy-MuiInputBase-input-MuiOutlinedInput-input"
      >
        <div
          class="MuiBox-root css-xv66a"
        >
          <div
            class="markdown-mock"
          >
            ### Markdown
          </div>
        </div>
        <div
          aria-hidden="true"
          class="MuiBox-root css-o8q9qw"
        />
        <div
          aria-hidden="true"
          class="MuiBox-root css-1baomxd"
        />
      </div>
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-ex8a5f-MuiNotchedOutlined-root"
        >
          <span>
            Description
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-ljal69-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-1mte8df-MuiGrid-root"
    >
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        0.5
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        1
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        2
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        3
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        5
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        8
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        13
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        21
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        100
      </button>
      <button
        class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        disabled=""
        tabindex="-1"
        type="button"
      >
        Pass
      </button>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorSecondary MuiButton-fullWidth css-d54x1o-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Show votes
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-lrpqt-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Clear votes
      </button>
    </div>
  </div>
  <div />
  <div
    class="MuiTableContainer-root css-70zvr5-MuiTableContainer-root"
  >
    <table
      class="MuiTable-root css-kax9f7-MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Host
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          >
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault css-caa35p-MuiChip-root"
              style="transform: none; border-color: rgb(158, 158, 158); color: rgb(158, 158, 158); transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <span
                class="MuiChip-label css-16cgrcw-MuiChip-label"
              >
                Hidden
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Voter 1
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          >
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault css-caa35p-MuiChip-root"
              style="transform: none; border-color: rgb(158, 158, 158); color: rgb(158, 158, 158); transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <span
                class="MuiChip-label css-16cgrcw-MuiChip-label"
              >
                Hidden
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Voter 2
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          />
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-1boqcjw-MuiPaper-root-MuiCard-root"
  >
    <form>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-mwb7rv-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-8rtno-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
          >
            You are currently an observer.
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-8rtno-MuiGrid-root"
        >
          <div
            class="MuiFormControl-root MuiFormControl-marginDense MuiFormControl-fullWidth MuiTextField-root css-xanwcj-MuiFormControl-root-MuiTextField-root"
            style="margin-top: -10px;"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1ntxhz6-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="false"
              for="standard-basic"
              id="standard-basic-label"
            >
              Your name
            </label>
            <div
              class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1oitbir-MuiInputBase-root-MuiInput-root"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                id="standard-basic"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-8rtno-MuiGrid-root"
        >
          <button
            class="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-dbv34z-MuiButtonBase-root-MuiButton-root"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            Join as voter
          </button>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`renders Session unchanged {"clients": [Array], "description": "### Markdown", "disconnectedClients": [Object], "epoch": 0, "finished": false, "host": "5cdf4eb9-4c88-47ee-85da-5a2e970ed79f", "me": [Object], "pagination": [Object], "privatePreview": null, "settings": [Object], "timerState": [Object], "votesVisible": false} 3`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-1 css-wj2tyh-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      <nav
        aria-label="pagination navigation"
        class="MuiPagination-root MuiPagination-text css-1xra8g6-MuiPagination-root"
      >
        <ul
          class="MuiPagination-ul css-1c5o7vy-MuiPagination-ul"
        >
          <li>
            <button
              aria-label="Go to previous page"
              class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded Mui-disabled MuiPaginationItem-previousNext css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
                data-testid="NavigateBeforeIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
            </button>
          </li>
          <li>
            <button
              aria-current="page"
              aria-label="page 1"
              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded Mui-selected MuiPaginationItem-page css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              tabindex="0"
              type="button"
            >
              1
            </button>
          </li>
          <li>
            <button
              aria-label="Go to next page"
              class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded Mui-disabled MuiPaginationItem-previousNext css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </nav>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      <button
        aria-label="New page"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
        data-mui-internal-clone-element="true"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="AddBoxIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4z"
          />
        </svg>
      </button>
      <span
        aria-label="Delete this page"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
            />
          </svg>
        </button>
      </span>
    </div>
  </div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1sstspl-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-4e5lyq-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="_r_1l_"
      id="_r_1l_-label"
    >
      Description
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-1not416-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <div
        class="MuiInputBase-input MuiOutlinedInput-input MuiBox-root css-1kuhkwy-MuiInputBase-input-MuiOutlinedInput-input"
      >
        <div
          class="MuiBox-root css-xv66a"
        >
          <div
            class="markdown-mock"
          >
            ### Markdown
          </div>
        </div>
        <div
          aria-hidden="true"
          class="MuiBox-root css-o8q9qw"
        />
        <div
          aria-hidden="true"
          class="MuiBox-root css-1baomxd"
        />
      </div>
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-ex8a5f-MuiNotchedOutlined-root"
        >
          <span>
            Description
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-ljal69-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-1mte8df-MuiGrid-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        0.5
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        1
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        2
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        3
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorSecondary css-1byfd1d-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        5
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        8
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        13
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        21
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        100
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Pass
      </button>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorSecondary MuiButton-fullWidth css-d54x1o-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Show votes
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-lrpqt-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Clear votes
      </button>
    </div>
  </div>
  <div />
  <div
    class="MuiTableContainer-root css-70zvr5-MuiTableContainer-root"
  >
    <table
      class="MuiTable-root css-kax9f7-MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Host
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          >
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault css-caa35p-MuiChip-root"
              style="transform: none; border-color: rgb(158, 158, 158); color: rgb(158, 158, 158); transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <span
                class="MuiChip-label css-16cgrcw-MuiChip-label"
              >
                Hidden
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Voter 1
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          >
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault css-caa35p-MuiChip-root"
              style="transform: none; border-color: rgb(158, 158, 158); color: rgb(158, 158, 158); transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <span
                class="MuiChip-label css-16cgrcw-MuiChip-label"
              >
                5
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Voter 2
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          />
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-1boqcjw-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-mwb7rv-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 css-1h3akp7-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-vqth7q-MuiTypography-root"
        >
          You are voting as 
          <b>
            Voter 1
          </b>
          .
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 css-1qcs568-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorSecondary MuiButton-fullWidth css-6bpxjb-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Rejoin as observer
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders Session unchanged {"clients": [Array], "description": "### Markdown", "disconnectedClients": [Object], "epoch": 0, "finished": false, "host": "5cdf4eb9-4c88-47ee-85da-5a2e970ed79f", "me": [Object], "pagination": [Object], "privatePreview": null, "settings": [Object], "timerState": [Object], "votesVisible": false} 4`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-1 css-wj2tyh-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      <nav
        aria-label="pagination navigation"
        class="MuiPagination-root MuiPagination-text css-1xra8g6-MuiPagination-root"
      >
        <ul
          class="MuiPagination-ul css-1c5o7vy-MuiPagination-ul"
        >
          <li>
            <button
              aria-label="Go to previous page"
              class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded Mui-disabled MuiPaginationItem-previousNext css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
                data-testid="NavigateBeforeIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
            </button>
          </li>
          <li>
            <button
              aria-current="page"
              aria-label="page 1"
              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded Mui-selected MuiPaginationItem-page css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              tabindex="0"
              type="button"
            >
              1
            </button>
          </li>
          <li>
            <button
              aria-label="Go to next page"
              class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded Mui-disabled MuiPaginationItem-previousNext css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </nav>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      <button
        aria-label="New page"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
        data-mui-internal-clone-element="true"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="AddBoxIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4z"
          />
        </svg>
      </button>
      <span
        aria-label="Delete this page"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
            />
          </svg>
        </button>
      </span>
    </div>
  </div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1sstspl-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-4e5lyq-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="_r_2a_"
      id="_r_2a_-label"
    >
      Description
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-1not416-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <div
        class="MuiInputBase-input MuiOutlinedInput-input MuiBox-root css-1kuhkwy-MuiInputBase-input-MuiOutlinedInput-input"
      >
        <div
          class="MuiBox-root css-xv66a"
        >
          <div
            class="markdown-mock"
          >
            ### Markdown
          </div>
        </div>
        <div
          aria-hidden="true"
          class="MuiBox-root css-o8q9qw"
        />
        <div
          aria-hidden="true"
          class="MuiBox-root css-1baomxd"
        />
      </div>
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-ex8a5f-MuiNotchedOutlined-root"
        >
          <span>
            Description
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-ljal69-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 css-1d243ht-MuiGrid-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        0.5
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        1
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        2
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        3
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorSecondary css-1byfd1d-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        5
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        8
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        13
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        21
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        100
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Pass
      </button>
    </div>
  </div>
  <div />
  <div
    class="MuiTableContainer-root css-70zvr5-MuiTableContainer-root"
  >
    <table
      class="MuiTable-root css-kax9f7-MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Host
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          >
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault css-caa35p-MuiChip-root"
              style="transform: none; border-color: rgb(158, 158, 158); color: rgb(158, 158, 158); transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <span
                class="MuiChip-label css-16cgrcw-MuiChip-label"
              >
                Hidden
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Voter 1
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          >
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault css-caa35p-MuiChip-root"
              style="transform: none; border-color: rgb(158, 158, 158); color: rgb(158, 158, 158); transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <span
                class="MuiChip-label css-16cgrcw-MuiChip-label"
              >
                5
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Voter 2
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          />
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-1boqcjw-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-mwb7rv-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 css-1h3akp7-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-vqth7q-MuiTypography-root"
        >
          You are voting as 
          <b>
            Voter 1
          </b>
          .
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 css-1qcs568-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorSecondary MuiButton-fullWidth css-6bpxjb-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Rejoin as observer
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders Session unchanged {"clients": [Array], "description": "### Markdown", "disconnectedClients": [Object], "epoch": 0, "finished": false, "host": "5cdf4eb9-4c88-47ee-85da-5a2e970ed79f", "me": [Object], "pagination": [Object], "privatePreview": null, "settings": [Object], "timerState": [Object], "votesVisible": true} 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-1 css-wj2tyh-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      <button
        aria-label="Private navigation"
        aria-pressed="false"
        class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-primary css-5w95gg-MuiButtonBase-root-MuiToggleButton-root"
        data-mui-internal-clone-element="true"
        tabindex="0"
        type="button"
        value="check"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.06 13C15.2 13 13.64 14.33 13.24 16.1C12.29 15.69 11.42 15.8 10.76 16.09C10.35 14.31 8.79 13 6.94 13C4.77 13 3 14.79 3 17C3 19.21 4.77 21 6.94 21C9 21 10.68 19.38 10.84 17.32C11.18 17.08 12.07 16.63 13.16 17.34C13.34 19.39 15 21 17.06 21C19.23 21 21 19.21 21 17C21 14.79 19.23 13 17.06 13M6.94 19.86C5.38 19.86 4.13 18.58 4.13 17S5.39 14.14 6.94 14.14C8.5 14.14 9.75 15.42 9.75 17S8.5 19.86 6.94 19.86M17.06 19.86C15.5 19.86 14.25 18.58 14.25 17S15.5 14.14 17.06 14.14C18.62 14.14 19.88 15.42 19.88 17S18.61 19.86 17.06 19.86M22 10.5H2V12H22V10.5M15.53 2.63C15.31 2.14 14.75 1.88 14.22 2.05L12 2.79L9.77 2.05L9.72 2.04C9.19 1.89 8.63 2.17 8.43 2.68L6 9H18L15.56 2.68L15.53 2.63Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      <nav
        aria-label="pagination navigation"
        class="MuiPagination-root MuiPagination-text css-1xra8g6-MuiPagination-root"
      >
        <ul
          class="MuiPagination-ul css-1c5o7vy-MuiPagination-ul"
        >
          <li>
            <button
              aria-label="Go to previous page"
              class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded Mui-disabled MuiPaginationItem-previousNext css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
                data-testid="NavigateBeforeIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
            </button>
          </li>
          <li>
            <button
              aria-current="page"
              aria-label="page 1"
              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded Mui-selected MuiPaginationItem-page css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              tabindex="0"
              type="button"
            >
              1
            </button>
          </li>
          <li>
            <button
              aria-label="Go to next page"
              class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-rounded Mui-disabled MuiPaginationItem-previousNext css-6qpcc8-MuiButtonBase-root-MuiPaginationItem-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
                data-testid="NavigateNextIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </nav>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      <button
        aria-label="New page"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
        data-mui-internal-clone-element="true"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="AddBoxIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4z"
          />
        </svg>
      </button>
      <span
        aria-label="Delete this page"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="DeleteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
            />
          </svg>
        </button>
      </span>
      <button
        aria-label="Session settings"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
        data-mui-internal-clone-element="true"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="SettingsIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1sstspl-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-4e5lyq-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="_r_30_"
      id="_r_30_-label"
    >
      Description
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-1not416-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <div
        class="MuiInputBase-input MuiOutlinedInput-input MuiBox-root css-1kuhkwy-MuiInputBase-input-MuiOutlinedInput-input"
      >
        <div
          class="MuiBox-root css-xv66a"
        >
          <div
            class="markdown-mock"
          >
            ### Markdown
          </div>
        </div>
        <div
          aria-hidden="true"
          class="MuiBox-root css-o8q9qw"
        />
        <div
          aria-hidden="true"
          class="MuiBox-root css-1baomxd"
        />
      </div>
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-ex8a5f-MuiNotchedOutlined-root"
        >
          <span>
            Description
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-ljal69-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-1mte8df-MuiGrid-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        0.5
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        1
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        2
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        3
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorSecondary css-1byfd1d-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        5
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        8
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        13
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        21
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        100
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorSecondary css-6iiolc-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Pass
      </button>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-1cixae8-MuiGrid-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorSecondary MuiButton-fullWidth css-d54x1o-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Hide votes
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-lrpqt-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Clear votes
      </button>
    </div>
  </div>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorSuccess MuiAlert-filled css-htwf7w-MuiPaper-root-MuiAlert-root"
      role="alert"
      style="--Paper-shadow: none; transform: none; transition: transform 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiAlert-icon css-vab54s-MuiAlert-icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
          data-testid="SuccessOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
          />
        </svg>
      </div>
      <div
        class="MuiAlert-message css-zioonp-MuiAlert-message"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom MuiAlertTitle-root css-5ick94-MuiTypography-root-MuiAlertTitle-root"
        >
          Consensus!
        </div>
        The score is 5
      </div>
    </div>
  </div>
  <div
    class="MuiTableContainer-root css-70zvr5-MuiTableContainer-root"
  >
    <table
      class="MuiTable-root css-kax9f7-MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Host
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          >
            <div
              class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault css-e1lpow-MuiChip-root"
              style="transform: none; background-color: rgb(76, 175, 80); border-width: 1px; border-style: solid; border-color: transparent; color: rgb(255, 255, 255); transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <span
                class="MuiChip-label css-1dybbl5-MuiChip-label"
              >
                5
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Voter 1
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          >
            <div
              class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault css-e1lpow-MuiChip-root"
              style="transform: none; background-color: rgb(76, 175, 80); border-width: 1px; border-style: solid; border-color: transparent; color: rgb(255, 255, 255); transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              <span
                class="MuiChip-label css-1dybbl5-MuiChip-label"
              >
                5
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-1yncbls-MuiTableRow-root"
          style="transform: none; transition: transform 500ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-15aamwl-MuiTableCell-root"
            scope="row"
          >
            <span
              class="MuiBox-root css-0"
            >
              Voter 2
            </span>
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1a6fiy0-MuiTableCell-root"
          />
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-1boqcjw-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-mwb7rv-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 css-1h3akp7-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-vqth7q-MuiTypography-root"
        >
          You are voting as 
          <b>
            Host
          </b>
          .
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 css-1qcs568-MuiGrid-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeMedium MuiButton-colorSecondary MuiButton-fullWidth css-6bpxjb-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Rejoin as observer
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
